# cdotc

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Debug.cpp  Debug.h  Dockerfile  Exceptions.cpp  Exceptions.h  Interpreter.cpp  Interpreter.h  Option.cpp  Option.h  Parser.cpp  Parser.h  README.md  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  Util.cpp  Util.h  Variant.cpp  Variant.h  main.cpp  src.xjs
.github/workflows/: build_Ubuntu16.yml  build_Ubuntu18.yml  build_macOS.yml  test_macOS.yml
AST/: AstNode.cpp  AstNode.h  Context.cpp  Context.h
AST/Expression/: Expression.cpp  Expression.h
AST/Operator/: BinaryOperator.cpp  BinaryOperator.h  ExplicitCastExpr.cpp  ExplicitCastExpr.h  Operator.cpp  Operator.h  TertiaryOperator.cpp  TertiaryOperator.h  UnaryOperator.cpp  UnaryOperator.h
AST/Statement/: CompoundStmt.cpp  CompoundStmt.h  DeclStmt.cpp  DeclStmt.h  Statement.h
AST/Visitor/: ContextVisitor.cpp  ContextVisitor.h  EvaluatingVisitor.cpp  EvaluatingVisitor.h  Visitor.cpp  Visitor.h
Objects/: Array.cpp  Array.h  Function.cpp  Function.h  Object.cpp  Object.h  Variable.cpp  Variable.h
Runtime/: RuntimeSupport.cpp
StdLib/: Class.cpp  Class.h  GlobalContext.cpp  GlobalContext.h  Method.cpp  Method.h
StdLib/IL/: libc.cdotil
StdLib/IR/: libc.ll
StdLib/Objects/: Array.cpp  Array.h  Function.cpp  Function.h  Object.cpp  Object.h
StdLib/Types/: Integer.cpp  Integer.h
StdLib/builtin/: Builtin.dot  BuiltinOps.dot  mod.dotm
StdLib/core/: ASCII.dot  Array.dot  BidirectionalCollection.dot  Bool.dot  Character.dot  Collection.dot  CollectionExtras.dot  Dictionary.dot  FlagEnum.dot  FloatingPoint.dot  Integers.dot  Iterable.dot  Macro.dot  MutableCollection.dot  Option.dot  Policy.dot  Print.dot  Protocols.dot  RandomAccessCollection.dot  Range.dot  RangeReplaceableCollection.dot  RawRepresentable.dot  SimpleArray.dot  Slice.dot  String.dot  UnsafePtr.dot  mod.dotm
StdLib/icu/: ICU.dot  mod.dotm
StdLib/main/: a.out  main.dot  main2.dot  main3.dot  main4.dot  std_main.dot  test.c  test.ll
StdLib/policy/: Basic.dot  Operators.dot  Policy.dot  Protocols.dot  mod.dotm
StdLib/runtime/: Runtime.dot
StdLib/test/: String.dot
Variant/: Arithmetic.cpp  Arithmetic.h  Conversion.cpp  Conversion.h  Variant.cpp  Variant.h
cmake-llvm/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rename.sh
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: alabaster.css  pygments.css
docs/content/: Attributes.html  BasicOperators.html  Basics.html  Classes.html  Closures.html  ControlFlow.html  CustomOperators.html  Enums.html  ErrorHandling.html  Extensions.html  Functions.html  Generics.html  Initialization.html  Macros.html  Optionals.html  Ownership.html  PatternMatching.html  Protocols.html  Structs.html
docs/source/: conf.py  index.rst  lexer.py
src/: Compiler.cpp  Compiler.h  Exceptions.cpp  Lexer.cpp  Lexer.h  ParseRecord.cpp  Parser.cpp  Parser.h  Preprocessor.cpp  Preprocessor.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  Util.cpp  Util.h  _Preprocessor.cpp  main.cpp  src.xjs
src/AST/: ASTContext.cpp  ASTContext.h  ASTDumper.cpp  ASTDumper.h  ASTVector.h  ASTVisitor.h  AbstractPass.h  AstDeclarations.h  AstNode.cpp  AstNode.def  AstNode.h  Attr.cpp  Attr.h  Attr.inc  Attribute.cpp  Attribute.h  Attributes.def  ConformanceTable.cpp  ConformanceTable.h  Context.cpp  Context.h  ContinuationPoint.h  Decl.cpp  Decl.def  Decl.h  DeclBase.cpp  DeclBase.h  DeclDenseMapInfo.h  EmptyASTVisitor.h  Expression.cpp  Expression.h  NamedDecl.cpp  NamedDecl.h  Namespace.cpp  Namespace.h  ParentMap.cpp  ParentMap.h  PrettyPrinter.cpp  PrettyPrinter.h  SourceType.h  (+16 more)
src/Basic/: Attributes.tg  BuiltinOperators.def  BuiltinOperators.tg  BuiltinTypes.def  BuiltinTypes.tg  Builtins.h  CastKind.cpp  CastKind.h  DeclNodes.tg  DeclarationName.cpp  DeclarationName.h  DependencyGraph.cpp  DependencyGraph.h  DiverseStack.cpp  DiverseStack.h  FileManager.cpp  FileManager.h  FileUtils.cpp  FileUtils.h  IdentifierInfo.cpp  IdentifierInfo.h  Mangle.cpp  Mangle.h  NestedNameSpecifier.cpp  NestedNameSpecifier.h  Precedence.cpp  Precedence.h  Reflection.tg  TargetInfo.cpp  TargetInfo.h  Variant.cpp  Variant.h
src/CTFE/: CTFEEngine.cpp  CTFEEngine.h  StaticEvaluator.cpp  StaticEvaluator.h  Value.cpp  Value.def  Value.h
src/ClangImporter/: ClangImporter.cpp  ClangImporter.h  ImportDecl.cpp  ImportExpr.cpp  ImportMacro.cpp  ImportType.cpp  ImporterImpl.h
src/Compiler/: PassManager.cpp  PassManager.h
src/Diagnostics/: Diagnostics.cpp  Diagnostics.tg  DiagnosticsEngine.cpp
src/Driver/: Compiler.cpp  Compiler.h  Job.cpp  Job.h  Jobs.def  main.cpp
src/Files/: FileManager.cpp  FileManager.h  FileUtils.cpp  FileUtils.h
src/IL/: Argument.cpp  Argument.h  BasicBlock.cpp  BasicBlock.h  CFG.h  Constant.cpp  Constant.h  Constants.cpp  Constants.h  Context.cpp  Context.h  Function.cpp  Function.h  GlobalVariable.cpp  GlobalVariable.h  ILBuilder.cpp  ILBuilder.h  ILType.h  Instruction.cpp  Instruction.h  Instructions.cpp  Instructions.def  Instructions.h  Intrinsics.def  MD.def  MetaData.cpp  MetaData.h  Module.cpp  Module.h  SymbolTableList.h  Use.cpp  Use.h  Value.cpp  Value.h  ValueSymbolTable.cpp  ValueSymbolTable.h
src/ILGen/: Cleanup.cpp  Cleanup.h  DebugInfo.cpp  DebugInfo.h  ILGenCast.cpp  ILGenClass.cpp  ILGenCoroutine.cpp  ILGenPass.cpp  ILGenPass.h  ILGenSpecialize.cpp
src/IRGen/: DIGen.cpp  IRDebugAnnotatePass.cpp  IRGen.cpp  IRGen.h  IRGenModule.cpp  LLVMIntrinsics.cpp  LLVMIntrinsics.def
src/Lex/: Lexer.cpp  Lexer.h  Persist.cpp  Persist.h  Preprocessor.cpp  Preprocessor.h  SourceLocation.cpp  SourceLocation.h  Token.cpp  Token.h  TokenKinds.h  Tokens.def
src/Message/: Diagnostics.cpp  Diagnostics.h  DiagnosticsEngine.cpp  DiagnosticsEngine.h  Exceptions.cpp  Exceptions.h  Warning.cpp  Warning.h  main.cpp
src/lex/: Lexer.h  (+11 more)
test/: DependentName.dot  Functions.cpp  TokenizerTest.cpp  UFCS.dot  main.cpp  mod.dotm
utils/: build_script  lldbDataFormatters.py  lldbDataFormatters_cdot.py
(+1241 files in other folders)
